feature: search functionality

--- a/src/index.css
+++ b/src/index.css
@@ -117,6 +117,7 @@ body::-webkit-scrollbar {
   font-weight: bold;
 }
 
+/* Pagination Css */
 .custom-pagination {
   display: flex;
   justify-content: space-between;
@@ -163,4 +164,33 @@ body::-webkit-scrollbar {
 
 .pagination-right {
   margin-left: auto;
+}
+
+/* search field css */
+.search-container {
+  display: flex;
+  align-items: center;
+  gap: 10px;
+  margin-bottom: 23px
+}
+
+.search-input {
+  padding: 8px;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+  font-size: 16px;
+}
+
+.search-button {
+  padding: 8px 16px;
+  background-color: #1b55e2;
+  color: white;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+  font-size: 16px;
+}
+
+.search-button:hover {
+  background-color: #0056b3;
 }
