--- a/src/index.css
+++ b/src/index.css
@@ -194,3 +194,11 @@ body::-webkit-scrollbar {
 .search-button:hover {
   background-color: #0056b3;
 }
+
+.no-record {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100px; /* You can adjust this height to fit your design */
+  margin-left: 25rem;
+}
